# varfish-server

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CHANGELOG.md  CONTRIBUTORS.rst  CONTRIBUTORS.txt  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  SECURITY.rst  _env  annots-table.diff  codecov.yml  env.example  environment.yaml  import.sh  import_versions.tsv  manage.py  npm-security-scan-20251126-143215.txt  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  setup.py  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: add-issue-to-project.yml  add-pr-to-project.yml  add-to-project.yml  automerge.yml  check-trailers.yml  (+17 more)
VEP/: HG008-T_vs_HG008-N-D.tnscope_VEP.ann.vcf  sample_vep.txt
annotation/: apps.py  models.py  urls.py  views.py
backend/: .gitattributes  .gitignore  .protolint.yaml  Makefile  Pipfile  dot_env.example  env.example  pyproject.toml
beaconsite/: forms.py  models.py  models_api.py  plugins.py  rules.py  urls.py  views.py  views_ajax.py  views_api.py
bgjobs/: __init__.py  admin.py  apps.py  models.py  plugins.py  rules.py  tests.py  urls.py  views.py
cases/: models.py  plugins.py  rules.py  serializers.py  urls.py  views.py  views_ajax.py  views_api.py
cases_files/: admin.py  apps.py  models.py  urls.py
cases_import/: admin.py  apps.py  models.py  plugins.py  proto.py  rules.py  serializers.py  tasks.py  urls.py  views.py  views_api.py
cases_qc/: models.py  serializers.py  urls.py  views_api.py
clinvar/: apps.py  clinvar_models.py  models.py
clinvar_export/: admin.py  clinvar_xml.py  models.py  plugins.py  rules.py  serializers.py  tasks.py  urls.py  views.py  views_ajax.py
cohorts/: apps.py  forms.py  models.py  plugins.py  serializers.py  urls.py  views.py  views_ajax.py  views_api.py
config/: celery.py  common.py  urls.py  wsgi.py
conservation/: apps.py  models.py
dbsnp/: apps.py  models.py
docker/: Dockerfile  build-docker.sh  docker-entrypoint.sh
docs/: .gitattributes  Makefile  SECURITY-NPM-SUPPLY-CHAIN.md  admin_config.rst  admin_extras.rst  admin_tuning.rst  api_importer.rst  api_overview.rst  conf.py  databases.rst  developer_checklists.rst  developer_database.rst  developer_kiosk.rst  developer_templates.rst  developer_tf.rst  glossary.rst  index.rst  make.bat  notes_clinvar.rst  projects_permissions.rst  requirements.txt  sop_filtration.rst  sop_supporting.rst  tutorials_kiosk.rst  ui_api_tokens.rst  ui_user_menu.rst  ui_user_profile.rst  variants_annotation.rst  variants_stats_qc.rst
docs_manual/: admin_backup.rst  admin_config.rst  admin_extras.rst  admin_ingest.rst  admin_install.rst  admin_pap.rst  admin_tuning.rst  admin_update_db.rst  admin_upgrade.rst  api_beacon.rst  api_case.rst  api_json_schemas.rst  api_overview.rst  api_projectroles.rst  bug_reports.rst  conf.py  databases.rst  dev_docker.rst  developer_checklists.rst  developer_data_builds.rst  developer_database.rst  developer_development.rst  developer_installation.rst  developer_kiosk.rst  developer_templates.rst  index.rst  installation.rst  notes_clinvar.rst  projects_permissions.rst  projects_search.rst  release_cycle.rst  requirements.txt  setup_core.rst  setup_extras.rst  setup_tuning.rst  smallprint.rst  sop_introduction.rst  tutorials_igv.rst  tutorials_kiosk.rst  ui_api_tokens.rst  (+7 more)
ext_gestaltmatcher/: apps.py  models.py
extra_annos/: models.py  views.py
frequencies/: apps.py  models.py  views.py
frontend/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.js  Makefile  index.html  jsconfig.json  openapi-ts.config.ts  openapi-ts.config.viguno.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js
geneinfo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  views_api.py
genepanels/: admin.py  apps.py  forms.py  models.py  plugins.py  rules.py  urls.py  views.py
genomicfeatures/: admin.py  apps.py  models.py
hgmd/: __init__.py  admin.py  apps.py  models.py
importer/: admin.py  models.py  plugins.py  qc_schemas.py  rules.py  serializers.py  tasks.py  urls.py  views.py  views_api.py
maintenance/: apps.py
pathways/: apps.py  models.py
querybuilder/: apps.py  models_support.py
regmaps/: admin.py  cmds.py  models.py
reports/: admin.py  forms.py  models.py  plugins.py  rules.py  urls.py  views.py
requirements/: base.txt  ldap.txt  local.txt  production.txt  test.txt
seqmeta/: admin.py  apps.py  models.py  plugins.py  rules.py  serializers.py  urls.py  views.py  views_api.py
sirloin/: conftest.py
svdbs/: admin.py  models.py
svs/: admin.py  apps.py  bg_db.py  forms.py  models.py  models_queries.py  plugins.py  queries.py  query_presets.py  query_schemas.py  rules.py  submit_mehari.py  tasks.py  urls.py  views.py
templatetags/: apps.py
tokens/: apps.py  forms.py  plugins.py  rules.py  urls.py  views.py
utility/: install_chrome.sh  install_chrome_gitlab.sh  install_ldap_dependencies.sh  install_os_dependencies.sh  install_os_gitlab.sh  install_python_dependencies.sh  install_vue_dev.sh
utils/: install_chrome.sh  install_os_gitlab.sh  install_python_dependencies.sh  install_vue_dev.sh  kickoff_orphaned_annotation_query.py  npm-security-check.sh  projectwide_query.py  quick_presets_to_docx.py  requirements-xenial.apt  scan-npm-compromise.sh  setup_database.sh  transfer_settings.py
var_stats_qc/: models.py  qc.py
varannos/: apps.py  models.py  plugins.py  queries.py  rules.py  serializers.py  views_api.py
varfish/: __init__.py  _version.py  api_utils.py  tasks.py  utils.py
variants/: admin.py  apps.py  file_export.py  forms.py  helpers.py  models.py  models_support.py  plugins.py  queries.py  query_presets.py  query_schemas.py  rules.py  serializers.py  submit_external.py  submit_filter.py  submit_mehari.py  sync_upstream.py  tasks.py  urls.py  utils.py  variant_stats.py  views.py  views_ajax.py  views_api.py
(+2898 files in other folders)
