[tool.poetry]
name = "varfish-server"
version = "1.2.3"
description = "The open platform for genetic variant analysis"
authors = [
    "Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>",
    "Oliver Stolpe <oliver.stolpe@bih-charite.de>",
]
license = "MIT"
readme = "README.md"
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]
packages = [
    { include = "beaconsite" },
    { include = "cases" },
    { include = "clinvar" },
    { include = "clinvar_export" },
    { include = "cohorts" },
    { include = "config" },
    { include = "conservation" },
    { include = "dbsnp" },
    { include = "extra_annos" },
    { include = "frequencies" },
    { include = "geneinfo" },
    { include = "genepanels" },
    { include = "genomicfeatures" },
    { include = "hgmd" },
    { include = "importer" },
    { include = "maintenance" },
    { include = "pathways" },
    { include = "regmaps" },
    { include = "svdbs" },
    { include = "svs" },
    { include = "templatetags" },
    { include = "var_stats_qc" },
    { include = "varannos" },
    { include = "varfish" },
    { include = "variants" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
omit = [
    "varfish/_version.py",
    "*migrations*",
    "*tests*",
]

[tool.coverage.report]
exclude_lines = [
    # Re-enable standard pragma
    "pragma: no cover",
    # Ignore repr() builtin definition, mostly useful for debug code anway
    "def __repr__",
    # Ignore the __main__ entry points
    "if __name__ == '__main__':",
    # Ignore abstract function bodies
    "raise NotImplementedError",
]

[tool.flake8]
exclude = [
    "docs",
    "tests",
    ".*.py",
    "wrapper.py",
    "versioneer.py",
    "docs_manual/src",
    "src",
    "varfish/vueapp/node_modules",
]
max-complexity = 18
select = ["B","C","E","F","W","T4","B9"]
ignore = ["E203","E266","E501","W503"]
max-line-length = 100
per-file-ignores = [
    "tests/**/*.py:E501",
    "docs/conf.py:ALL",
    "config/settings/*.py:F401,F403,F405",
]
import-order-style = "google"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pytest.ini_options]
env = [
    "DJANGO_SETTINGS_MODULE=config.settings.test",
]
