[metadata]
name = varfish-server
author = Manuel Holtgrewe, Oliver Stolpe
author_email = manuel.holtgrewe@bih-charite.de, oliver.stolpe@bih-charite.de
project_urls =
    Documentation = https://varfish-server.readthedocs.io
    Source = https://github.com/bihealth/varfish-server
Description = The open platform for genetic variant analysis
license = MIT
